--- a/Golf1/Base.lproj/Main.storyboard
+++ b/Golf1/Base.lproj/Main.storyboard
@@ -60,6 +60,15 @@
                                     <segue destination="5pP-hR-fwn" kind="show" identifier="" id="5XR-AV-wgl"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mT-vd-Eet">
+                                <rect key="frame" x="102" y="530" width="171" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Statistic Averages "/>
+                                <connections>
+                                    <segue destination="4Q2-Ca-Qrk" kind="show" id="mXt-IA-WEM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.94692005788238753" green="0.98152799309798278" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -605,13 +614,42 @@
             </objects>
             <point key="canvasLocation" x="1120.8" y="445.72713643178412"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="DUJ-we-5M3">
+            <objects>
+                <viewController id="4Q2-Ca-Qrk" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0FB-LM-O8v"/>
+                        <viewControllerLayoutGuide type="bottom" id="mY9-JW-CsE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XY9-zj-idZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L0d-10-w4C">
+                                <rect key="frame" x="0.0" y="20" width="59" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="0Rf-GA-Gjj"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.89803921568627454" green="0.94117647058823528" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jzS-fg-aUS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1095" y="1114"/>
+        </scene>
     </scenes>
     <resources>
         <image name="M-EAGAN_WILDCATS_ksu_for_website-01_1024x1024.png" width="1024" height="1024"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bFa-3a-KjP"/>
+        <segue reference="0Rf-GA-Gjj"/>
         <segue reference="7KA-CI-V5s"/>
-        <segue reference="awC-Ko-hx5"/>
+        <segue reference="GSu-gB-Hmh"/>
     </inferredMetricsTieBreakers>
 </document>
